# Profile

./: README.md
Profile/Multiagent_Project/: test_model.py
Profile/Multiagent_Project/DSN_test1/: Agent.py  DSN_test1.py  Replaybuffer.py  test_agent.py
Profile/NLP_Project/: Soutenance_INF442_JingtianJi_YunhaoYU.pptx
Profile/NLP_Project/NER_Model/: AttentionEncoder.py  Classifier.py  WordEmbedding.py
Profile/NLP_Project/NLP_Project/: CMakeLists.txt  README.md
Profile/NLP_Project/NLP_Project/cpp/: CMakeLists.txt
Profile/NLP_Project/NLP_Project/cpp/include/: mylib
Profile/NLP_Project/NLP_Project/cpp/include/mylib_bits/: ConfusionMatrix.hpp  kernel.hpp  logisticregression.hpp  svm.hpp
Profile/NLP_Project/NLP_Project/cpp/src/: ConfusionMatrix.cpp  kernel.cpp  logisticregression.cpp  svm.cpp
Profile/NLP_Project/NLP_Project/cpp/tests/: CMakeLists.txt
Profile/NLP_Project/NLP_Project/cpp/tests/src/: test.cpp
Profile/NLP_Project/NLP_Project/data/: Multiple Tags in One Sentence.txt  Multiple Tags.txt  Special characters Tags.txt
Profile/NLP_Project/NLP_Project/python/: ConfusionMatrix.cpp  logisticregression.cpp  mylib.cpp  svm.cpp
Profile/NLP_Project/NLP_Project/scripts/: test_dataset.py  test_model.py  test_trainedModel.py
Profile/NLP_Project/NLP_Project/scripts/NER_Model/: CharEmbedding.py  DataSet.py  SkipGram.py
Profile/NLP_Project/NLP_Project/scripts/runs/May17_19-07-20_jijingtians-MBP.mshome.netModel/: events.out.tfevents.1621271240.jijingtians-MBP.mshome.net
Profile/NLP_Project/NLP_Project/tests/: test_LR.py  test_SVM.py  test_sklearn.py
Profile/NLP_Project/scripts/NER_Model/: NerModel.py
Profile/Reinforcement_Learning_Project/Dads/: agent.py  evaluate_agent.py  test_dads.py
